# obsidian-logging

./: .release.toml  Cargo.toml  LICENSE  LICENSE.md  README.md  justfile  obsidian-logging.example.yaml  olog.example.toml  olog.example.yaml  release.sh  template.example.md  test_config.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
app/: Cargo.toml
app/src/: main.rs
app/tests/: stdin_tests.rs
lib/: Cargo.toml
lib/src/: lib.rs  utils.rs
lib/src/commands/: add.rs  list.rs
lib/tests/: add_tests.rs  config_tests.rs  edit_tests.rs  template_tests.rs
src/: config.rs  lib.rs  log.rs  main.rs  template.rs  utils.rs
src/commands/: add.rs  edit.rs  list.rs  mod.rs  remove.rs
tests/: add_tests.rs  config_tests.rs  edit_tests.rs  list_tests.rs  main_tests.rs  phrase_tests.rs  stdin_tests.rs  template_tests.rs  utils_tests.rs
