[package]
name = "obsidian-logging"
version = "1.0.4"
edition = "2021"
description = "A journaling/logging CLI that stores logs in Obsidian markdown files"
license = "MIT"
repository = "https://github.com/ljantzen/obsidian-logging"
homepage = "https://github.com/ljantzen/obsidian-logging"
documentation = "https://docs.rs/obsidian-logging"
readme = "README.md"
authors = ["Leif Jantzen"]
keywords = ["obsidian", "journal", "logging", "cli", "markdown"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "/.github",
    "/tests",
    "/.gitignore",
]

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
serde_yaml = "0.9"
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"

