[package]
name = "obsidian-logging-cli"
version = "1.3.4"
edition = "2021"
description = "A journaling/logging CLI that stores logs in Obsidian markdown files"
license = "MIT"
repository = "https://github.com/ljantzen/obsidian-logging"
authors = ["Leif Jantzen"]

[[bin]]
name = "obsidian-logging"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.43", features = ["serde", "unstable-locales"] }
clap = { version = "4.5.58", features = ["derive"] }
obsidian-logging = { path = "../lib" }

[dev-dependencies]
assert_cmd = "2.1.2"
serial_test = "3.3.1"
tempfile = "3.25.0"
walkdir = "2.5.0"
serde_yaml = "0.9.29"
